# decorum

./: .gitignore  Cargo.toml  README.md  build.rs  rustdoc.sh
.cargo/: config
.github/workflows/: continuous-integration.yml
doc/: katex-header.html
src/: canonical.rs  cmp.rs  constrain.rs  constraint.rs  divergence.rs  expression.rs  hash.rs  lib.rs  notnan.rs  ordered.rs  policy.rs  primitive.rs  proxy.rs  real.rs
src/proxy/: constrained.rs  mod.rs  nan.rs
