[package]
name = "decorum"
version = "0.3.1"
edition = "2018"
license = "MIT"
readme = "README.md"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
repository = "https://github.com/olson-sean-k/decorum"
description = "Total ordering, equivalence, hashing, and constraints for floating-point types."
keywords = [
    "finite",
    "float",
    "hash",
    "nan",
    "ordering"
]
categories = [
    "mathematics",
    "no-std",
    "rust-patterns"
]

[package.metadata.docs.rs]
all-features = true
# Enable KaTeX support.
rustdoc-args = [
    "--html-in-header",
    "doc/katex-header.html"
]

[features]
default = ["approx", "serialize-serde", "std"]
serialize-serde = ["serde", "serde_derive"]
std = ["approx/std", "num-traits/std", "thiserror"]

[dependencies.approx]
version = "^0.5.0"
default-features = false
features = []
optional = true

[dependencies.num-traits]
version = "^0.2.0"
default-features = false
features = []

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_derive]
version = "1.0"
default-features = false
optional = true

# TODO: Use `thiserror` in `no_std` environments when support lands.
#       See https://github.com/dtolnay/thiserror/pull/64
[dependencies.thiserror]
version = "^1.0.0"
optional = true

[dev-dependencies]
num = "^0.4.0"
